--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -4,8 +4,10 @@ spring:
     #   数据源基本配置
     username: root
     password: yjzky
-    driver-class-name: com.mysql.cj.jdbc.Driver
+    driver-class-name: com.mysql.jdbc.Driver
     url: jdbc:mysql://115.29.166.64:3306/digitization-assess?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=UTC
+
+
   servlet:
     multipart: #配置文件上传
       max-file-size: 100MB #设置上传的单个文件最大值，单位可以是 MB、KB，默认为 1MB
