--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,73 @@
 #\u751F\u4EA7\u73AF\u5883\uFF0C\u5F00\u53D1\u73AF\u5883\u5207\u6362  dev/test
 spring.profiles.active=dev
 
+### durid ###
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+
+#\u521D\u59CB\u5316\u8FDE\u63A5\u6570
+spring.datasource.druid.initial-size=5
+#\u6700\u5C0F\u7A7A\u95F2\u8FDE\u63A5
+spring.datasource.druid.min-idle=1
+#\u6700\u5927\u6D3B\u52A8\u8FDE\u63A5
+spring.datasource.druid.max-active=100
+#\u83B7\u53D6\u8FDE\u63A5\u65F6\u6D4B\u8BD5\u662F\u5426\u53EF\u7528
+spring.datasource.druid.test-on-borrow=true
+# \u914D\u7F6E\u83B7\u53D6\u8FDE\u63A5\u7B49\u5F85\u8D85\u65F6\u7684\u65F6\u95F4
+spring.datasource.druid.max-wait=60000
+# \u914D\u7F6E\u95F4\u9694\u591A\u4E45\u624D\u8FDB\u884C\u4E00\u6B21\u68C0\u6D4B\uFF0C\u68C0\u6D4B\u9700\u8981\u5173\u95ED\u7684\u7A7A\u95F2\u8FDE\u63A5\uFF0C\u5355\u4F4D\u662F\u6BEB\u79D2
+spring.datasource.druid.time-between-eviction-runs-millis=60000
+# \u914D\u7F6E\u4E00\u4E2A\u8FDE\u63A5\u5728\u6C60\u4E2D\u6700\u5C0F\u751F\u5B58\u7684\u65F6\u95F4\uFF0C\u5355\u4F4D\u662F\u6BEB\u79D2
+spring.datasource.druid.min-evictable-idle-time-millis=300000
+
+#---------\u5728\u7A0B\u5E8F\u91CC\u9762\u914D\u7F6Edruid\u4E0D\u80FD\u7EDF\u8BA1Sql\uFF0C\u628A\u914D\u7F6E\u653E\u5728\u8FD9\u91CC\u53EF\u4EE5\u7EDF\u8BA1----
+# \u8FC7\u6EE4\u5668\u8BBE\u7F6E\uFF08\u7B2C\u4E00\u4E2Astat\u5F88\u91CD\u8981\uFF0C\u6CA1\u6709\u7684\u8BDD\u4F1A\u76D1\u63A7\u4E0D\u5230SQL\uFF09
+spring.datasource.druid.filters=stat,wall,log4j
+
+##### WebStatFilter\u914D\u7F6E #######
+#\u542F\u7528StatFilter
+spring.datasource.druid.web-stat-filter.enabled=true
+#\u6DFB\u52A0\u8FC7\u6EE4\u89C4\u5219
+spring.datasource.druid.web-stat-filter.url-pattern=/*
+#\u6392\u9664\u4E00\u4E9B\u4E0D\u5FC5\u8981\u7684url
+spring.datasource.druid.web-stat-filter.exclusions=*.js,*.gif,*.jpg,*.png,*.css,*.ico,/druid/*
+#\u5F00\u542Fsession\u7EDF\u8BA1\u529F\u80FD
+spring.datasource.druid.web-stat-filter.session-stat-enable=true
+#\u7F3A\u7701sessionStatMaxCount\u662F1000\u4E2A
+spring.datasource.druid.web-stat-filter.session-stat-max-count=1000
+
+##### StatViewServlet\u914D\u7F6E #######
+#\u542F\u7528\u5185\u7F6E\u7684\u76D1\u63A7\u9875\u9762
+spring.datasource.druid.stat-view-servlet.enabled=true
+#\u5185\u7F6E\u76D1\u63A7\u9875\u9762\u7684\u5730\u5740
+spring.datasource.druid.stat-view-servlet.url-pattern=/druid/*
+#\u5173\u95ED Reset All \u529F\u80FD
+spring.datasource.druid.stat-view-servlet.reset-enable=false
+#\u8BBE\u7F6E\u767B\u5F55\u7528\u6237\u540D
+spring.datasource.druid.stat-view-servlet.login-username=admin
+#\u8BBE\u7F6E\u767B\u5F55\u5BC6\u7801
+spring.datasource.druid.stat-view-servlet.login-password=admin
+#\u767D\u540D\u5355\uFF08\u5982\u679Callow\u6CA1\u6709\u914D\u7F6E\u6216\u8005\u4E3A\u7A7A\uFF0C\u5219\u5141\u8BB8\u6240\u6709\u8BBF\u95EE\uFF09
+spring.datasource.druid.stat-view-servlet.allow=127.0.0.1,115.29.166.64
+#\u9ED1\u540D\u5355\uFF08deny\u4F18\u5148\u4E8Eallow\uFF0C\u5982\u679C\u5728deny\u5217\u8868\u4E2D\uFF0C\u5C31\u7B97\u5728allow\u5217\u8868\u4E2D\uFF0C\u4E5F\u4F1A\u88AB\u62D2\u7EDD\uFF09
+spring.datasource.druid.stat-view-servlet.deny=
+
+# \u5F00\u542F\u6162SQL\u7EDF\u8BA1\uFF08\u8FD9\u91CC\u8D85\u8FC75000\u6BEB\u79D2\u5219\u5224\u5B9A\u4E3A\u6162SQL\uFF09
+spring.datasource.druid.filter.stat.enabled=true
+spring.datasource.druid.filter.stat.log-slow-sql=true
+spring.datasource.druid.filter.stat.slow-sql-millis=5000
+# Spring \u76D1\u63A7\u914D\u7F6E\uFF08\u914D\u7F6E\u591A\u4E2AAOP\u5207\u5165\u70B9\u4F7F\u7528\u82F1\u6587\u9017\u53F7\u5206\u9694\uFF09
+spring.datasource.druid.aop-patterns=com.assess.mapper.*
+
+
+### log4j ###
+log4j.rootLogger=DEBUG,Console
+log4j.appender.Console=org.apache.log4j.ConsoleAppenderlog4j.appender.Console.layout=org.apache.log4j.PatternLayout
+og4j.appender.Console.layout.ConversionPattern=%d [%t] %-5p [%c] - %m%n
+log4j.logger.org.apache=INFO
 
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger- %msg%n 
 logging.pattern.file=%d{yyyy-MM-dd HH:mm} [%thread] %-5level %logger- %msg%n
+#\u65E5\u5FD7\u8F93\u51FA\u4F4D\u7F6E
 logging.file=C:/digitizationLog/digitization.log  
 
 
